--- a/resources/style.css
+++ b/resources/style.css
@@ -1,11 +1,11 @@
 /*
-Theme Name:         Sage Starter Theme
-Theme URI:          https://roots.io/sage/
-Description:        Sage is a WordPress starter theme.
-Version:            9.0.2
-Author:             Roots
-Author URI:         https://roots.io/
-Text Domain:        sage
+Theme Name:         Wise Theme
+Theme URI:          https://github.com/antistatique/wise
+Description:        Sage is a WordPress starter theme based on roots/sage.
+Version:            1.0.0
+Author:             Antistatique
+Author URI:         https://antistatique.net/
+Text Domain:        wise
 
 License:            MIT License
 License URI:        http://opensource.org/licenses/MIT
