--- a/resources/views/templates/page.twig
+++ b/resources/views/templates/page.twig
@@ -2,6 +2,7 @@
 
 {% block content %}
 	<div class="content-wrapper">
+	{% include 'partials/breadcrumb.twig' %}
 		<article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
 			<section class="article-content">
 				<h1 class="article-h1">{{post.title}}</h1>
