--- a/resources/style.css
+++ b/resources/style.css
@@ -5,7 +5,7 @@ Description:        Sage is a WordPress starter theme based on roots/sage.
 Version:            1.0.0
 Author:             Antistatique
 Author URI:         https://antistatique.net/
-Text Domain:        wise
+Text Domain:        lang
 
 License:            MIT License
 License URI:        http://opensource.org/licenses/MIT
